examples of action button, snackbar, listView, and card

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,21 +1,77 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:card="http://schemas.android.com/apk/res-auto"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.jarojas.example.MainActivity">
-
-    <Button
+    tools:context="com.example.jarojas.example.MainActivity"
+    android:background="@color/gray">
+    <RelativeLayout android:layout_height="match_parent"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/btn_enter"
-        android:id="@+id/button"
-        android:background="@color/colorAccent"
-        android:textColor="@color/abc_primary_text_material_dark"
-        android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true" />
-</RelativeLayout>
+        >
+        <android.support.v4.widget.SwipeRefreshLayout
+            android:id="@+id/srLayoutRefresh"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/list_height"
+            >
+            <ListView android:id="@+id/lvList"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"></ListView>    
+        </android.support.v4.widget.SwipeRefreshLayout>
+
+        <TextView android:id="@+id/tvTitulo"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/txt_titulo"
+            android:layout_below="@+id/srLayoutRefresh"/>
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/tvTitulo"
+            android:text="@string/btn_enter"
+            android:id="@+id/button"
+            android:textColor="@color/white"
+            android:theme="@style/customRaisedButton"/>
+
+        <android.support.design.widget.FloatingActionButton
+            android:id="@+id/fabCustomFloatActButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_star"
+            android:layout_below="@id/button"/>
+        
+        <android.support.v7.widget.CardView
+            android:layout_width="@dimen/card_size"
+            android:layout_height="@dimen/card_size"
+            android:layout_below="@id/fabCustomFloatActButton"
+            card:cardCornerRadius="@dimen/card_border">
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+                <ImageView android:id="@+id/imgLollipop"
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/image_height"
+                    android:src="@drawable/lollipop"
+                    android:scaleType="centerCrop"/>
+                <TextView android:id="@+id/txtCardTitle"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/card_title"
+                    android:textSize="@dimen/card_title_size"
+                    android:textStyle="bold"
+                    android:layout_below="@id/imgLollipop"/>
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/card_text"
+                    android:layout_below="@id/txtCardTitle"/>
+            </RelativeLayout>
+
+        </android.support.v7.widget.CardView>
+    </RelativeLayout>
+
+</android.support.design.widget.CoordinatorLayout>
