--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,9 +2,12 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
-    <dimen name="list_height">100dp</dimen>
+    <dimen name="list_height">200dp</dimen>
     <dimen name="card_size">200dp</dimen>
     <dimen name="card_border">4dp</dimen>
     <dimen name="card_title_size">20dp</dimen>
     <dimen name="image_height">120dp</dimen>
+    <dimen name="contact_det_name">40dp</dimen>
+    <dimen name="contact_det_item">24dp</dimen>
+    <dimen name="contact_det_item_border">5dp</dimen>
 </resources>
