--- a/app/src/main/res/layout/my_pet_item.xml
+++ b/app/src/main/res/layout/my_pet_item.xml
@@ -1,49 +1,44 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_height="wrap_content"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_margin="@dimen/cardview_default_margin"
     android:elevation="@dimen/cardview_default_elevation"
     app:cardCornerRadius="@dimen/cardview_default_radius">
 
     <LinearLayout android:layout_margin="@dimen/cardview_default_margin"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
         <ImageView
-        android:id="@+id/ivPetImage"
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/petImageHeight"
+        android:id="@+id/ivMyPetImage"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:src="@drawable/bunny1" />
 
         <LinearLayout
         android:layout_width="match_parent"
         android:orientation="horizontal"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+            android:weightSum="1">
 
-            <ImageView
-                android:layout_width="28dp"
-                android:layout_height="28dp"
-                android:src="@drawable/bonewhite" />
-            <TextView android:id="@+id/tvName"
+            <TextView android:id="@+id/tvMyPetRating"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="24sp"
-                android:gravity="fill"
-                android:text="@string/app_name"/>
-            <TextView android:id="@+id/tvRating"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:textSize="24sp"
-                android:layout_weight="2"
                 android:textAlignment="textEnd"
-                android:text="@string/app_name"/>
+                android:text="10"
+                android:layout_weight="0.64" />
+
             <ImageView
-                android:layout_width="28dp"
+                android:layout_width="55dp"
                 android:layout_height="28dp"
+                android:layout_gravity="right"
                 android:src="@drawable/boneblack" />
+
         </LinearLayout>
 
     </LinearLayout>
