--- a/app/src/main/res/menu/action_bar_menu.xml
+++ b/app/src/main/res/menu/action_bar_menu.xml
@@ -6,6 +6,11 @@
         app:showAsAction="always"
         android:icon="@drawable/five_star"></item>
 
-    <item android:title="@string/action_other"
+    <item android:id="@+id/actionContact"
+        android:title="@string/action_contact"
+        app:showAsAction="collapseActionView"></item>
+
+    <item android:id="@+id/actionAbout"
+        android:title="@string/action_about"
         app:showAsAction="collapseActionView"></item>
 </menu>
